--- a/src/input.css
+++ b/src/input.css
@@ -3,7 +3,7 @@
 @tailwind components;
 @tailwind utilities;
 .card {
-	@apply bg-white rounded overflow-hidden shadow-md relative object-cover;
+	@apply bg-white rounded overflow-hidden shadow-md relative ;
 }
 .badge {
 	@apply bg-orange-400 text-white text-xs uppercase font-bold rounded-full p-2 absolute top-0 ml-2 mt-2;
